force-app/main/default/objects/Loan_Event_Detail__c/Loan_Event_Detail__c.object-meta.xml
<CustomObject>
    <description>This object describes details of loan events that may occur on an investment record (creation, rescheduling, write-off, pay off etc.)</description>
    <label>Loan Event Detail</label>
    <nameField>
        <displayFormat>LED-{00000000}</displayFormat>
        <label>Loan Event Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Event Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>