force-app/main/default/objects/Loan_Event_Detail__c/fields/Fees_Expected__c.field-meta.xml
<CustomField>
    <fullName>Fees_Expected__c</fullName>
    <label>Fees Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>