force-app/main/default/objects/Loan_Event_Detail__c/fields/Interest_Charge__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charge__c</fullName>
    <label>Interest Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>