force-app/main/default/objects/Loan_Event_Detail__c/fields/Interest_Expected_Standard_Loan__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expected_Standard_Loan__c</fullName>
    <label>Interest Expected (Standard Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>