force-app/main/default/objects/Loan_Event_Detail__c/fields/Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid__c</fullName>
    <label>Interest Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>