force-app/main/default/objects/Loan_Event_Detail__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Interest Rate for this period. E.g. for capturing interest rate changes during a schedule.</description>
    <inlineHelpText>Interest Rate for this period. E.g. for capturing interest rate changes during a schedule.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>