force-app/main/default/objects/Loan_Event_Detail__c/fields/Late_Repayment_Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fixed_Fee__c</fullName>
    <label>Late Repayment Fixed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>