force-app/main/default/objects/Loan_Event_Detail__c/fields/Loan_Event__c.field-meta.xml
<CustomField>
    <fullName>Loan_Event__c</fullName>
    <label>Loan Event</label>
    <referenceTo>Loan_Event__c</referenceTo>
    <relationshipLabel>Loan Event Details</relationshipLabel>
    <relationshipName>Loan_Event_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>