force-app/main/default/objects/Loan_Event_Detail__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration</label>
    <type>Checkbox</type>
</CustomField>